fix(shelf): search shelfs on mobile

--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -1555,7 +1555,7 @@
   font-family: OpenSans;
 
   @media screen and (max-width: 767px) {
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 400;
   }
 }
